# docs/swagger.yaml
@@ -66,6 +66,41 @@ paths:
       summary: 提交列表
       tags:
       - 公共方法
+  /register:
+    post:
+      parameters:
+      - description: username
+        in: formData
+        name: username
+        required: true
+        type: string
+      - description: password
+        in: formData
+        name: password
+        required: true
+        type: string
+      - description: code
+        in: formData
+        name: code
+        required: true
+        type: string
+      - description: mail
+        in: formData
+        name: mail
+        required: true
+        type: string
+      - description: phone
+        in: formData
+        name: phone
+        type: string
+      responses:
+        "200":
+          description: '{"code":200,"data":""}'
+          schema:
+            type: string
+      summary: 用户注册
+      tags:
+      - 公共方法
   /send-email:
     post:
       parameters:
@@ -95,6 +130,25 @@ paths:
           schema:
             type: string
       summary: 用户信息
+      tags:
+      - 公共方法
+  /user-rank-list:
+    get:
+      parameters:
+      - description: page
+        in: query
+        name: page
+        type: integer
+      - description: size
+        in: query
+        name: size
+        type: integer
+      responses:
+        "200":
+          description: '{"code":200,"data":""}'
+          schema:
+            type: string
+      summary: 用户排行榜
       tags:
       - 公共方法
 swagger: "2.0"
