# models/user_basic.go
@@ -4,12 +4,14 @@ import "gorm.io/gorm"
 
 type UserBasic struct {
 	gorm.Model
-	Identity string `gorm:"column:identity;type:varchar(36);" json:"identity"` // 用户表的唯一标识
-	Name     string `gorm:"column:name;type:varchar(100);" json:"name"`
-	Password string `gorm:"column:password;type:varchar(32);" json:"password"`
-	Phone    string `gorm:"column:phone;type:varchar(20);" json:"phone"`
-	Mail     string `gorm:"column:mail;type:varchar(100);" json:"mail"`
-	IsAdmin  int    `gorm:"column:is_admin;type:tinyint(1);" json:"is_admin"` // 是否是管理员【0-否，1-是】
+	Identity  string `gorm:"column:identity;type:varchar(36);" json:"identity"` // 用户表的唯一标识
+	Name      string `gorm:"column:name;type:varchar(100);" json:"name"`
+	Password  string `gorm:"column:password;type:varchar(32);" json:"password"`
+	Phone     string `gorm:"column:phone;type:varchar(20);" json:"phone"`
+	PassNum   int64  `gorm:"column:pass_num;type:int(11);" json:"pass_num"`
+	SubmitNum int64  `gorm:"column:submit_num;type:int(11);" json:"submit_num"` // 提交次数
+	Mail      string `gorm:"column:mail;type:varchar(100);" json:"mail"`
+	IsAdmin   int    `gorm:"column:is_admin;type:tinyint(1);" json:"is_admin"` // 是否是管理员【0-否，1-是】
 }
 
 func (table *UserBasic) TableName() string {
